--- a/awake-chamber.html
+++ b/awake-chamber.html
@@ -20,7 +20,7 @@
     <a href="donations.html"><img src="assets/donations-button.png" class="pixel-art top-nav-content"></a>
   </nav>
 
-  <iframe src="https://www.crabicle.com/" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://sparked-frame-0.netlify.app/" frameborder="0" scrolling="no"></iframe>
   <div id="game-container" style="width: 1920px; height: 1080px"></div>
 </body>
 </html>
