Read URL from IFRAME

--- a/awake-chamber.html
+++ b/awake-chamber.html
@@ -8,9 +8,8 @@
   <script src="game-embed/Build/build1.loader.js"></script>
   <noscript>You need to enable JavaScript to use this website</noscript>
 </head>
-<body>
-
-
+<body class="background-basic-blue">
+  <script src="redirect-parent.js"></script>
   <h1 class="pixel-art">
     <img class="header-img" src="assets/sparked-logo-txt.png">
   </h1>
@@ -20,7 +19,7 @@
     <a href="donations.html"><img src="assets/donations-button.png" class="pixel-art top-nav-content"></a>
   </nav>
 
-  <iframe src="https://sparked-frame-0.netlify.app/" frameborder="0" scrolling="no"></iframe>
-  <div id="game-container" style="width: 1920px; height: 1080px"></div>
+  <iframe id="game-frame" src="https://sparked-frame-0.netlify.app/" frameborder="0" scrolling="no" ></iframe>
+
 </body>
 </html>
